--- a/ProjetWinBet/WebContent/static/css/styles.css
+++ b/ProjetWinBet/WebContent/static/css/styles.css
@@ -1,5 +1,31 @@
+body{
+font-family:"Gadugi";
+font-size:15px;	
+}
+
+
 table { 
-    border-spacing: 15px;
+    border-spacing: 30px;
     border-collapse: separate;
+}
+
+.titre {
+font-size:20px;
+color: white;
+}
+
+.une {
+text-align: center;
+text-decoration: underline;
+font-size:35px;
+color: #cc0000;
+font-family:"Impact";
+}
+
+.unedetail {
+text-align: center;
+font-size:25px;
+color: #800000;
+font-family:"Impact";
 }
 
