--- a/ProjetWinBet/WebContent/static/css/styles.css
+++ b/ProjetWinBet/WebContent/static/css/styles.css
@@ -35,3 +35,10 @@ font-family:"Impact";
  background-repeat: no-repeat;
  width: auto;
 }
+
+.error, .errors {
+	color: red;
+}
+.required {
+	color: red;
+}
